--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -302,7 +302,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -351,6 +351,32 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="Led_status">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>20</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>led1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Openfile_po">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>470</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>打开文件</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
